--- a/py/mkdocs.yml
+++ b/py/mkdocs.yml
@@ -1,31 +1,66 @@
 site_name: Listen
 nav:
   - Python:
-    - grammar: 
+    - grammar:
+      - 数据结构: python/grammar/数据结构.markdown
       - 函数: python/grammar/函数.md
+      - 内置函数: python/grammar/内置函数.markdown
       - 类: python/grammar/类.md
       - 装饰器: python/grammar/装饰器.md
-    - Library: 
-      - python/library/time.md
-  - WebPage:
-      - pass
+    - Library:
+      - os: python/library/os.markdown 
+      - shutil: python/library/shutil.markdown
+  # - WebPage:
+  #     - pass
   - Automated testing:
+      - Selenium: testing/Selenium.markdown
       - PyAutoGUI: testing/PyAutoGUI and pyperclip.md
-  - Servers:
-      - pass
+  # - Servers:
+  #     - pass
   - Deploy:
     - Linux: deploy/Linux.md
     - Nginx: deploy/nginx.md
     - Docker: deploy/Docker.md
   - tool:
     - Git: tool/Git.md
-
+    - Openpyxl: tool/Openpyxl.markdown
+    - Pandas: tool/Pandas.markdown
 theme:
   name: mkdocs
+  highlightjs: true
+  hljs_languages:
+    - yaml
+    - rust
+    - python
   locale: zh_CN
   user_color_mode_toggle: true
 
-# markdown_extensions:
+markdown_extensions:
+  - admonition  # 提示块
+  - footnotes  # 脚注
+  - meta  # 定义元数据，通过文章上下文控制，如disqus
+  - pymdownx.caret  # 下划线上标
+  - pymdownx.tilde  # 删除线下标
+  - pymdownx.critic  # 增加删除修改高亮注释，可修饰行内或段落
+  - pymdownx.details  # 提示块可折叠
+  - pymdownx.inlinehilite  # 行内代码高亮
+  - pymdownx.mark  # 文本高亮
+  - pymdownx.smartsymbols  # 符号转换
+  - pymdownx.superfences  # 代码嵌套在列表里
+  - codehilite:    # 代码高亮，显示行号
+      guess_lang: false
+      linenums: true
+  - toc:  # 锚点
+      permalink: true
+  # - pymdownx.arithmatex  # 数学公式
+  - pymdownx.betterem:  # 对加粗和斜体更好的检测
+      smart_enable: all
+#  - pymdownx.emoji:  # 表情
+#      emoji_generator: !!python/name:pymdownx.emoji.to_svg
+#  - pymdownx.magiclink  # 自动识别超链接
+  - pymdownx.tasklist:  # 复选框checklist
+      custom_checkbox: true
+
 #   - toc:
 #       permalink: "#"
 #       baselevel: 1
